# LimeRFE_8001P_1v1

./: CMakeLists.txt  README.md
LimeRFE_8001P/: BuiltinConnections.cpp  CMakeLists.txt  CMakeListsStandalone.txt  CMakeLists_LimeSuite.txt  LimeRFE_8001P.fbp  LimeRFE_8001P.h  LimeRFE_8001P_Device.cpp  LimeRFE_8001P_Device.h  LimeRFE_8001P_api.cpp  LimeRFE_8001P_app.cpp  LimeRFE_8001P_app.h  LimeRFE_8001P_channel_image.h  LimeRFE_8001P_channel_image_230127.h  LimeRFE_8001P_cmd.cpp  LimeRFE_8001P_constants.h  LimeRFE_8001P_gui.cpp  LimeRFE_8001P_gui.h  LimeRFE_8001P_wxgui.cpp  LimeRFE_8001P_wxgui.h  LimeSuite.h  SystemResources.cpp  VersionInfo.cpp
LimeRFE_8001P/LMS8001/: CMakeCache1.txt  CMakeLists.txt  Logger.cpp  Makefile  cmake_install.cmake  dlgAbout.cpp  dlgAbout.h  lms8suite.fbp  lms8suiteApp.cpp  lms8suiteAppFrame.cpp  lms8suiteAppFrame.h  lms8suiteApp_gui.cpp  lms8suiteApp_gui.h
LimeRFE_8001P/LMS8001/ADF4002/: ADF4002.cpp  ADF4002.h  ADF4002_wxgui.cpp  ADF4002_wxgui.fbp  ADF4002_wxgui.h  ADF4002_wxgui_view.cpp  ADF4002_wxgui_view.h
LimeRFE_8001P/LMS8001/API/: lms8_api.cpp  lms8_device.cpp  lms8_device.h
LimeRFE_8001P/LMS8001/Si5351C/: Si5351C_wxgui.cpp  Si5351C_wxgui.fbp  Si5351C_wxgui.h  Si5351C_wxgui_view.cpp  Si5351C_wxgui_view.h
LimeRFE_8001P/LMS8001/examples/: CMakeLists.txt  LMS8_basic.cpp
LimeRFE_8001P/LMS8001/lime/: LMS8001_parameters.h  LMS8API.h
LimeRFE_8001P/LMS8001/lms8001/: LMS8001.cpp  LMS8001.h  LMS8001_RegistersMap.cpp  LMS8001_RegistersMap.h  LMS8001_parameters.cpp  lmsComms.cpp  lmsComms.h
LimeRFE_8001P/LMS8001/lms8001/connectionManager/: ConnectionCOM.cpp  ConnectionCOM.h  ConnectionManager.cpp  ConnectionManager.h  ConnectionSPI.cpp  ConnectionSPI.h  ConnectionUSB.cpp  ConnectionUSB.h  IConnection.h
LimeRFE_8001P/LMS8001/lms8001_wxgui/: channel_image.h  lms8001_gui_utilities.h  lms8001_mainPanel.cpp  lms8001_pnlChannel_view.cpp  lms8001_pnlChannel_view.h  lms8001_pnlConfig_view.cpp  lms8001_pnlConfig_view.h  lms8001_pnlHLMIX_view.h  lms8001_pnlLDO_view.h  lms8001_pnlPLLConfig_view.h  lms8001_pnlPLLProfiles_view.h  lms8001_wxgui.cpp  lms8001_wxgui.h
LimeRFE_8001P/LMS8001/utilities_gui/: GPIO_wxgui.cpp  GPIO_wxgui.h  SPI_wxgui.cpp  SPI_wxgui.h  dlgConnectionSettings.cpp  dlgConnectionSettings.h  dlgConnectionSettingsLMS7.cpp  dlgConnectionSettingsLMS7.h  dlgDeviceInfo.cpp  dlgDeviceInfo.h  dlgFullMessageLog.cpp  dlgFullMessageLog.h  dlgTempCalibrate.cpp  dlgTempCalibrate.h  pnlMiniLog.cpp  pnlMiniLog.h  utilities_gui.cpp  utilities_gui.fbp  utilities_gui.h
LimeRFE_8001P/examples/: CMakeLists.txt  LimeRFE_8001P_LMS8_example.cpp  LimeRFE_8001P_USB_example.cpp  LimeRFE_8001P_example.cpp
LimeRFE_8001P/resources/: resource.rc
